put meson.build in each directories to allow using files full power

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,72 +1,7 @@
-include_engine = files([
-  'engine/Camera.h',
-  'engine/CEntity.h',
-  'engine/Engine-main.h',
-  'engine/FrameBuffer.h',
-  'engine/GBuffer.h',
-  'engine/IResourceManager.hpp',
-  'engine/Light.h',
-  'engine/Mesh.h',
-  'engine/MeshException.h',
-  'engine/MeshManager.h',
-  'engine/SceneGraph.h',
-  'engine/Shader.h',
-  'engine/ShadowMap.h',
-  'engine/SkyboxShader.h'
-  ])
-include_misc = files([
-  'misc/Input.h'
-])
-
-include_tools = files([
-  'tools/BasicMeshManager.h',
-  'tools/CubemapTexture.h',
-  'tools/DebugGL.h',
-  'tools/Interpolate.hpp',
-  'tools/Loader.h',
-  'tools/Parser.h',
-  'tools/SDL_Tools.h',
-  'tools/Texture.h'
-])
-include_window = files([
-  'window/WindowHandle.h',
-  'window/WindowManager.h'
-])
-include_window_sdl2 = files([
-'window/sdl2/SDL2GLWindow.h'
-])
-source_engine  = files([
-  'engine/Camera.cpp',
-  'engine/CEntity.cpp',
-  'engine/Engine-main.cpp',
-  'engine/FrameBuffer.cpp',
-  'engine/GBuffer.cpp',
-  'engine/Light.cpp',
-  'engine/Mesh.cpp',
-  'engine/MeshException.cpp',
-  'engine/MeshManager.cpp',
-  'engine/SceneGraph.cpp',
-  'engine/Shader.cpp',
-  'engine/ShadowMap.cpp',
-  'engine/SkyboxShader.cpp'
-])
-source_misc = files([
-  'misc/Input.cpp'
-])
-source_tools = files([
-  'tools/BasicMeshManager.cpp',
-  'tools/CubemapTexture.cpp',
-  'tools/DebugGL.cpp',
-  'tools/Loader.cpp',
-  'tools/Parser.cpp',
-  'tools/Texture.cpp'
-])
-source_window = files([
-  'window/WindowHandle.cpp'
-])
-source_window_sdl2 = files([
- 'window/sdl2/SDL2GLWindow.cpp'
-])
+subdir('engine')
+subdir('misc')
+subdir('tools')
+subdir('window')
 
 simple3dengineSrc =[
   include_engine, include_misc, include_tools, include_window,
