--- a/src/window/meson.build
+++ b/src/window/meson.build
@@ -14,3 +14,6 @@ source_window = files([
 source_window_sdl2 = files([
  'sdl2/SDL2GLWindow.cpp'
 ])
+
+install_headers(include_window, subdir: 'S3DE/window')
+install_headers(include_window_sdl2, subdir: 'S3DE/window/sdl2')
