--- a/src/meson.build
+++ b/src/meson.build
@@ -9,4 +9,5 @@ simple3dengineSrc =[
   source_window, source_window_sdl2
 ]
 
-simple3dengine_lib = library('Simple3DEngine' , simple3dengineSrc, dependencies: [sdl2_dep,sdl2image_dep,assimp_dep,glew_dep,glm_dep])
+simple3dengine_lib = library('Simple3DEngine' , simple3dengineSrc, dependencies: [sdl2_dep,sdl2image_dep,assimp_dep,glew_dep,glm_dep],
+                            install: true)
