--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,1 +1,2 @@
 option('test', type : 'boolean', value : false, description : 'Enable build of test')
+option('documentation', type: 'boolean', value : false, description: 'Enable documentation generation')
