add sdl2_utils dependency

--- a/src/meson.build
+++ b/src/meson.build
@@ -3,6 +3,8 @@ subdir('misc')
 subdir('tools')
 subdir('window')
 
+subdir('sdl2_utils')
+
 simple3dengineSrc =[
   include_engine, include_misc, include_tools, include_window,
   include_window_sdl2, source_engine, source_misc, source_tools,
@@ -11,7 +13,8 @@ simple3dengineSrc =[
 
 simple3dengine_lib = library('Simple3DEngine' ,
                              simple3dengineSrc,
-                             dependencies: [sdl2_dep,
+                             dependencies: [simple3dengine_sdl2_utils_dep,
+                                            sdl2_dep,
                                             sdl2image_dep,
                                             assimp_dep,
                                             glew_dep,
