--- a/src/window/meson.build
+++ b/src/window/meson.build
@@ -1,19 +1,12 @@
 include_window = files([
-  'WindowHandle.h',
-  'WindowManager.h'
-])
-
-include_window_sdl2 = files([
-'sdl2/SDL2GLWindow.h'
-])
+                        'WindowHandle.h',
+                        'WindowManager.h'
+                      ])
 
 source_window = files([
-  'WindowHandle.cpp'
-])
+                       'WindowHandle.cpp'
+                     ])
 
-source_window_sdl2 = files([
- 'sdl2/SDL2GLWindow.cpp'
-])
+subdir('sdl2')
 
 install_headers(include_window, subdir: 'S3DE/window')
-install_headers(include_window_sdl2, subdir: 'S3DE/window/sdl2')
