--- a/src/tools/meson.build
+++ b/src/tools/meson.build
@@ -1,19 +1,27 @@
-include_tools = files([
-  'BasicMeshManager.h',
-  'CubemapTexture.h',
-  'DebugGL.h',
-  'Interpolate.hpp',
-  'Loader.h',
-  'Parser.h',
-  'Texture.h'
-])
-source_tools = files([
-  'BasicMeshManager.cpp',
-  'CubemapTexture.cpp',
-  'DebugGL.cpp',
-  'Loader.cpp',
-  'Parser.cpp',
-  'Texture.cpp'
-])
+simple3dengine_tools_headers = files([
+                                      'DebugGL.h',
+                                      'Interpolate.hpp',
+                                      'Loader.h',
+                                      'Parser.h',
+                                    ])
 
-install_headers(include_tools, subdir: 'S3DE/tools')
+simple3dengine_tools_sources = files([
+                                      'DebugGL.cpp',
+                                      'Loader.cpp',
+                                      'Parser.cpp',
+                                    ])
+
+simple3dengine_tools_include = include_directories('.')
+
+simple3dengine_tools_lib = library('Simple3DEngine_tools',
+                                   sources: [simple3dengine_tools_headers,
+                                             simple3dengine_tools_sources,],
+                                   dependencies: [glew_dep,
+                                                  range_v3_dep,],
+                                   include_directories: simple3dengine_tools_include,)
+
+simple3dengine_tools_dep = declare_dependency(link_with: simple3dengine_tools_lib,
+                                              dependencies: [glew_dep,
+                                                             range_v3_dep,],
+                                              include_directories: simple3dengine_tools_include,)
+
