--- a/src/window/meson.build
+++ b/src/window/meson.build
@@ -1,12 +1,23 @@
-include_window = files([
-                        'WindowHandle.h',
-                        'WindowManager.h'
-                      ])
+simple3dengine_window_headers = files([
+                                       'WindowHandle.h',
+                                       'WindowManager.h'
+                                     ])
 
-source_window = files([
-                       'WindowHandle.cpp'
-                     ])
+simple3dengine_window_sources = files([
+                                       'WindowHandle.cpp'
+                                     ])
+
+simple3dengine_window_include = include_directories('.')
+
+simple3dengine_window_lib = library('Simple3DEngine_window',
+                                    sources: [simple3dengine_window_headers,
+                                              simple3dengine_window_sources],
+                                    include_directories: simple3dengine_window_include)
+
+simple3dengine_window_dep = declare_dependency(link_with: simple3dengine_window_lib,
+                                               include_directories: simple3dengine_window_include)
 
 subdir('sdl2')
 
-install_headers(include_window, subdir: 'S3DE/window')
+
+
